--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ button {
 
 .nav {}
 
-.logo {
+.logo-header {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -36,7 +36,7 @@ button {
     color: #4d5ae5;
 }
 
-.logo-span {
+.logo-header-span {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -112,6 +112,91 @@ button {
 }
 /* #endregion Hero */
 
+/* #region Features */
+.features {}
+
+.features-title {}
+
+.features-item {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px; 
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.features-text {
+    font-size: 16px;
+    line-height: 24px; 
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+/* #endregion Features */
+
+/* #region Team*/
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px; 
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.team {}
+
+.team-item {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px; 
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.team-text {
+    font-size: 16px;
+    line-height: 24px; 
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;}
+/* #endregion Team*/
+
+/* #region portfolio */
+.portfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px; 
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.portfolio {}
+
+.portfolio-item {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px; 
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.portfolio-text {
+    font-size: 16px;
+    line-height: 24px; 
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+/* #endregion portfolio */
 
 /* #region footer */
 .footer {
