add styles file

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,17 +136,24 @@ button {
 /* #endregion Features */
 
 /* #region Team*/
+.team {
+    background-color: #F4F4FD
+}
+
 .team-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 40px; 
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
     text-align: center;
     color: #2e2f42;
 }
 
-.team {}
+.team-list {
+    background-color: #FFFFFF;
+}
 
 .team-item {
     font-weight: 500;
@@ -172,8 +179,9 @@ button {
     font-weight: 700;
     font-size: 36px;
     line-height: 40px; 
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
     text-align: center;
     color: #2e2f42;
 }
